feat: Allow setting categories when editing recipes and simplify exception handling